# BEP-Remote-Health-Monitoring-System-for-the-Elderly

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DEMO.md  FreeRTOSConfig.h  deploy.sh  lwipopts.h  mbedtls_config.h  pico_sdk_import.cmake  tusb_config.h
.github/workflows/: host-tests.yml
HealthMonitorWakeTest/: local.properties  settings.gradle.kts
HealthMonitorWakeTest/HealthMonitorWakeTest/app/: build.gradle.kts
HealthMonitorWakeTest/HealthMonitorWakeTest/gradle/: libs.versions.toml
MagicMirror/: .gitignore  package-lock.json
MagicMirror/config/: config.js  custom.css
MagicMirror/modules/MMM-CustomMQTTBridge/: MMM-CustomMQTTBridge.js  node_helper.js  package-lock.json  package.json
MagicMirror/modules/MMM-SensorUI/: MMM-SensorUI.css  MMM-SensorUI.js
MagicMirror/modules/MMM-VidConf/: MMM-VidConf.css  MMM-VidConf.js
bestanden_vorige_BAP/: .gitignore  README.md  deploy.sh  registration.sh  requirements.txt  setup.py
bestanden_vorige_BAP/SBC/: README.md  deploy.sh  registration.sh  requirements.txt  transmission.sh
bestanden_vorige_BAP/SBC/base/: RMMS.service  mosquitto.conf
bestanden_vorige_BAP/SBC/device/: Client.py  DepClient.py  __init__.py  (+5 more)
bestanden_vorige_BAP/mosquitto/: aclfile  mosquitto.conf  passwd
bestanden_vorige_BAP/registration_software/: __init__.py  __make_identity__.py
bestanden_vorige_BAP/resources/: index.html
boot/: start_magicmirror.sh
components/board/: CMakeLists.txt  board_pico2wh.h  err.h  flash_map.h
components/cfg/: CMakeLists.txt  cfg.c  cfg.h
components/i2c_bus/: CMakeLists.txt  i2c_bus.c  i2c_bus.h
components/identity/: CMakeLists.txt  identity.c  identity.h
components/json/: CMakeLists.txt  json_encode.c  json_encode.h  json_parse.c  json_parse.h
components/log/: CMakeLists.txt  log.c  log.h
components/mqtt_client/: CMakeLists.txt  mqtt_client.c  mqtt_client.h
components/sensor_air/: CMakeLists.txt  air_task.c  ens160.c  ens160.h  sensor_air.h
components/sensor_env/: CMakeLists.txt  aht21.c  aht21.h  bme280.c  bme280.h  env_driver.h  env_select.c  sensor_env.c  sensor_env.h
components/sensor_ir_camera/: CMakeLists.txt  sensor_ir_camera.c  sensor_ir_camera.h
components/sensor_light/: CMakeLists.txt  bh1750.c  bh1750.h  gl5516.c  gl5516.h  light_driver.h  light_select.c  sensor_light.c  sensor_light.h
components/sensor_radar/: CMakeLists.txt  radar_bha2.c  radar_c1001.c  radar_driver.h  radar_filter.c  radar_filter.h  radar_hmmd.c  radar_select.c  radar_task.c
components/spool/: CMakeLists.txt  spool.c  spool.h
components/storage/: CMakeLists.txt  storage.c  storage.h
components/tls_context/: CMakeLists.txt  tls_context.c  tls_context.h
components/transport_mqtt/: CMakeLists.txt  transport_mqtt.c  transport_mqtt.h
components/transport_selector/: CMakeLists.txt  transport_selector.c  transport_selector.h
components/transport_usb/: CMakeLists.txt  stream_cdc.c  stream_cdc.h  tusb_config.h
components/transport_wifi/: CMakeLists.txt  stream_tcp.c  stream_tcp.h  transport_wifi.c  transport_wifi.h
components/ui_input/: CMakeLists.txt  ui_input.c  ui_input.h
components/ui_oled/: CMakeLists.txt  sh1106.c  sh1106.h  sh1122.c  sh1122.h  ui_oled.c  ui_oled.h
docs/: CLAUDE_radxa.md  CLAUDE_tablet.md  bring_up.md  mqtt_topics.md  pin_map.md  presence_screen_coupling.md  sbc-failover-and-idempotency.md  technical-audit.md
docs/adr/: 0001-light-sensor-bh1750.md  0002-wifi-sole-transport.md  0003-nv-flash-spool-and-time-sync.md  0004-localhost-plain-listener-app-ipc.md  0005-mcu-side-radar-filtering.md  0006-phase-based-breath-hold-detection.md  0007-hmmd-radar-second-driver.md  README.md
fully/: fully-settings.json
gradle/wrapper/: gradle-wrapper.properties
main/: CMakeLists.txt  app_config.h  app_main.c
sbc/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RUNBOOK.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
sbc/deployment/: install.sh  mosquitto-client.conf  rmms-aggregator.service  uninstall.sh
sbc/examples/fhir/: bundle_transaction.json  observation_aqi.json  observation_breath.json  observation_co2.json  observation_distance.json  observation_heart.json  observation_humidity.json  observation_lux.json  observation_presence.json  observation_pressure.json  observation_temp.json  observation_tvoc.json
sbc/src/rmms_aggregator/: __init__.py  __main__.py  config.py
sbc/src/rmms_aggregator/cli/: provision.py
sbc/src/rmms_aggregator/domain/: decode.py  dedup.py  quality.py  sample.py
sbc/src/rmms_aggregator/fhir/: builder.py  client.py  codes.py  identifiers.py  mapping.py  oauth.py  resource_json.py
sbc/src/rmms_aggregator/health/: server.py
sbc/src/rmms_aggregator/mqtt/: client.py  publisher.py  subscriber.py
sbc/src/rmms_aggregator/retry/: deadletter.py
sbc/src/rmms_aggregator/storage/: models.py  repository.py
sbc/src/rmms_aggregator/storage/migrations/: env.py
sbc/src/rmms_aggregator/storage/migrations/versions/: 0001_initial.py  0002_sample_built.py
sbc/tests/pure/: test_fhir_shape.py  test_pure_core.py
sbc/tests/unit/: conftest.py  test_builder.py  test_client.py  test_repository.py
sbc/tools/: gen_fhir_examples.py
scripts/: bake_certs.py  build.sh  demo_start.sh  deploy_home_kit.sh  mock_radxa.py  provision_ca.sh  provision_device.py  refresh_broker.sh  setup_tablet_ssh.sh  tablet_boot.sh  tablet_mdns_responder.py  tablet_presence_screen.py  tablet_start_magicmirror.sh  test_broker_acl.sh
test/bringup/: CMakeLists.txt  blink.c  bme280_only.c  ens160_only.c  freertos_hello.c  mqtt_connect.c  oled_only.c  provision.c  radar_only.c  sensors_publish.c  storage_counter.c  usb_console.c  wifi_connect.c  wifi_sysfree.c
test/bringup/lwip/: lwipopts.h
test/host/: CMakeLists.txt  run.sh  test_aht21.c  test_bh1750.c  test_ens160.c  test_radar_bha2.c  test_radar_filter.c  test_radar_hmmd.c  test_sensor_env.c  test_spool.c
test/host/stubs/: FreeRTOS.h  host_stubs.c  host_stubs.h  queue.h  task.h
test/host/stubs/hardware/: adc.h  flash.h  gpio.h  i2c.h  uart.h
test/host/stubs/pico/: stdlib.h  time.h
(+156 files in other folders)
