[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rmms-aggregator"
version = "0.1.0"
description = "RMMS SBC aggregator: sensor MQTT → FHIR R4, with 24h store-and-forward and idempotency"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "paho-mqtt>=2.0,<3",
    # FHIR R4 family via the pydantic-v2 line. fhir.resources 7.x is pydantic v2
    # (matches our pydantic>=2.6 + pydantic-settings v2 + the model_validate()
    # calls); its R4 resources live in the `fhir.resources.R4B` subpackage
    # (R4B = FHIR 4.3, the R4-family release), which builder.py/provision.py
    # import. (The 6.x line is FHIR 4.0.1 but is pydantic v1 — incompatible with
    # the rest of this stack; if strict 4.0.1 is ever required, that is a
    # separate pydantic-v1 build documented via ADR. sbc/CLAUDE.md §3 said "7.x".)
    "fhir.resources>=7.1.0",
    "httpx>=0.27",
    "authlib>=1.3",            # available for the production SMART JWT client-assertion flow
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",            # httpx mocking for FHIR client tests
]

[project.scripts]
rmms-aggregator = "rmms_aggregator.__main__:main"
rmms-provision = "rmms_aggregator.cli.provision:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rmms_aggregator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
